fix bugs & load messages & show messages