@@ -4,6 +4,7 @@ import com.imad.pulsechat.auth.JwtService;
 import com.imad.pulsechat.user.User;
 import com.imad.pulsechat.user.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.jspecify.annotations.NonNull;
 import org.springframework.messaging.Message;
 import org.springframework.messaging.MessageChannel;
 import org.springframework.messaging.simp.stomp.StompCommand;
@@ -13,7 +14,7 @@ import org.springframework.messaging.support.MessageHeaderAccessor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
+import java.util.Collections;
 
 @Component
 @RequiredArgsConstructor
@@ -23,42 +24,41 @@ public class WebSocketAuthInterceptor implements ChannelInterceptor {
     private final UserRepository userRepository;
 
     @Override
-    public Message<?> preSend(
-            Message<?> message,
-            MessageChannel channel
-    ) {
+    public Message<?> preSend(@NonNull Message<?> message, @NonNull MessageChannel channel) {
 
         StompHeaderAccessor accessor =
-                MessageHeaderAccessor.getAccessor(
-                        message, StompHeaderAccessor.class);
+                MessageHeaderAccessor.getAccessor(message, StompHeaderAccessor.class);
+
+        if (accessor == null) {
+            return message;
+        }
 
         if (StompCommand.CONNECT.equals(accessor.getCommand())) {
 
-            String authHeader =
-                    accessor.getFirstNativeHeader("Authorization");
+            String authHeader = accessor.getFirstNativeHeader("Authorization");
 
             if (authHeader != null && authHeader.startsWith("Bearer ")) {
 
                 String token = authHeader.substring(7);
 
-                String username =
-                        jwtService.extractUsername(token);
+                String username = jwtService.extractUsername(token);
 
-                User user =
-                        userRepository.findByUsername(username)
-                                .orElseThrow();
+                User user = userRepository
+                        .findByUsername(username)
+                        .orElseThrow();
 
                 UsernamePasswordAuthenticationToken authentication =
                         new UsernamePasswordAuthenticationToken(
-                                user,
+                                user.getUsername(),
                                 null,
-                                List.of()
+                                Collections.emptyList()
                         );
 
                 accessor.setUser(authentication);
+
+                System.out.println("WebSocket user authenticated: " + username);
             }
         }
-
         return message;
     }
 }
